# tiiuae-firewall

./: Cargo.toml  README.md  build.sh  flake.nix  run_app.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: rust-ci.yml
ebpf-fw/: Cargo.toml
ebpf-fw-common/: Cargo.toml
ebpf-fw-ebpf/: Cargo.toml
ebpf-fw-ebpf/src/: main.rs
ebpf-fw/src/: main.rs
scripts/: build.sh  run_app.sh  run_dev.sh  run_dev_env.sh  run_tests.sh  run_vscode.sh
tiiuae-fw/: Cargo.toml
tiiuae-fw-common/: Cargo.toml
tiiuae-fw-common/src/: lib.rs
tiiuae-fw-ebpf/: Cargo.toml
tiiuae-fw-ebpf/src/: main.rs
tiiuae-fw/custom_task/: generate_compile_time_info.rs
tiiuae-fw/src/: cli.rs  lib.rs  main.rs
tiiuae-fw/src/config/: config_impl.rs  field_maps.rs  mod.rs  rule.rs  utils.rs
tiiuae-fw/src/tests/: config_all_valid.toml
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  run.rs
