
[package]
name = "ebpf-fw"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
ebpf-fw-common = { path = "../ebpf-fw-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.3"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
serde_with = "3.9.0"
serde_json = "1.0.120"
phf = { version = "0.11.2", features = ["macros"] }
lazy_static = "1.5.0"
pnet = "0.35.0"
ipnetwork = "0.20"
[build-dependencies]
chrono = "0.4.38"
# All features enabled
[[bin]]
name = "ebpf-fw"
path = "src/main.rs"

[dev-dependencies]
ebpf-fw = { path = "." }
