[package]
name = "tiiuae-fw"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
tiiuae-fw-common = { path = "../tiiuae-fw-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.3"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }


[[bin]]
name = "tiiuae-fw"
path = "src/main.rs"
